# simulation_modeling_stat

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.ipynb
assets/: style.css
plot/: continous_distribution.py
