[project]
name = "simulation-modeling-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
