[project]
name = "simulation-modeling-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
